--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -4,7 +4,7 @@
   <% if @artist %>
     <%= f.hidden_field :artist_id%>
   <%else%>
-    <%= Artist.helpers.artist_select %>
+    <%= artist_select %>
   <%end%>
   <%= f.text_field :artist_name %>
   <br />
